--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://i.imgur.com/gkxhiifs.png" />
+    <link rel="icon" href="https://i.imgur.com/2Co921q.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -41,3 +41,4 @@
     -->
   </body>
 </html>
+
