--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="elon's twitter"
+      content="ETWEET"
     />
     <link rel="apple-touch-icon" href="https://i.imgur.com/2Co921q.png" crossorigin="anonymous" />
     <!--
