--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="ETWEET"
+      content="eTweet"
     />
     <link rel="apple-touch-icon" href="https://i.imgur.com/4szhJfT.png" crossorigin="anonymous" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Elon's Twitter</title>
+    <title>eTweet</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
